make csv code deprecated